Volta/Compiler/VoltaParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.8
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from ../Volta.g4//VoltaParser.g4 by ANTLR 4.8

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.8")]
[System.CLSCompliant(false)]
public partial class VoltaParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		NOT=1, HASH=2, DOLAR=3, AND=4, OR=5, BL=6, BR=7, SEMICOLON=8, ADD=9, ADDADD=10, 
		SUB=11, SUBSUB=12, MUL=13, DIV=14, MDIV=15, EQUALEQUAL=16, NOTEQUAL=17, 
		GREATEREQUAL=18, LESSEQUAL=19, EQUAL=20, GREATER=21, LESS=22, CURLYBL=23, 
		CURLYBR=24, SQUAREBL=25, SQUAREBR=26, COLON=27, DOT=28, COMMA=29, QUESTIONMARK=30, 
		CLASS=31, CONST=32, ELSE=33, IF=34, NEW=35, READ=36, RETURN=37, VOID=38, 
		WHILE=39, WRITE=40, TRUE=41, FALSE=42, FOR=43, SWITCH=44, CASE=45, BREAK=46, 
		DEFAULT=47, IDENT=48, NUM=49, CHARCONST=50, STRING=51, COMMENT=52, WS=53;
	public const int
		RULE_program = 0, RULE_constDecl = 1, RULE_varDecl = 2, RULE_classDecl = 3, 
		RULE_methodDecl = 4, RULE_formPars = 5, RULE_type = 6, RULE_statement = 7, 
		RULE_block = 8, RULE_actPars = 9, RULE_condition = 10, RULE_condTerm = 11, 
		RULE_condFact = 12, RULE_expr = 13, RULE_term = 14, RULE_factor = 15, 
		RULE_designator = 16, RULE_mulop = 17, RULE_addop = 18, RULE_relop = 19, 
		RULE_switch = 20;
	public static readonly string[] ruleNames = {
		"program", "constDecl", "varDecl", "classDecl", "methodDecl", "formPars", 
		"type", "statement", "block", "actPars", "condition", "condTerm", "condFact", 
		"expr", "term", "factor", "designator", "mulop", "addop", "relop", "switch"
	};

	private static readonly string[] _LiteralNames = {
		null, "'!'", "'#'", "'$'", "'&&'", "'||'", "'('", "')'", "';'", "'+'", 
		"'++'", "'-'", "'--'", "'*'", "'/'", "'%'", "'=='", "'!='", "'>='", "'<='", 
		"'='", "'>'", "'<'", "'{'", "'}'", "'['", "']'", "':'", "'.'", "','", 
		"'?'", "'class'", "'const'", "'else'", "'if'", "'new'", "'read'", "'return'", 
		"'void'", "'while'", "'write'", "'true'", "'false'", "'for'", "'switch'", 
		"'case'", "'break'", "'default'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "NOT", "HASH", "DOLAR", "AND", "OR", "BL", "BR", "SEMICOLON", "ADD", 
		"ADDADD", "SUB", "SUBSUB", "MUL", "DIV", "MDIV", "EQUALEQUAL", "NOTEQUAL", 
		"GREATEREQUAL", "LESSEQUAL", "EQUAL", "GREATER", "LESS", "CURLYBL", "CURLYBR", 
		"SQUAREBL", "SQUAREBR", "COLON", "DOT", "COMMA", "QUESTIONMARK", "CLASS", 
		"CONST", "ELSE", "IF", "NEW", "READ", "RETURN", "VOID", "WHILE", "WRITE", 
		"TRUE", "FALSE", "FOR", "SWITCH", "CASE", "BREAK", "DEFAULT", "IDENT", 
		"NUM", "CHARCONST", "STRING", "COMMENT", "WS"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "VoltaParser.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static VoltaParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public VoltaParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public VoltaParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class ProgramContext : ParserRuleContext {
		public ProgramContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_program; } }
	 
		public ProgramContext() { }
		public virtual void CopyFrom(ProgramContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class ProgramASTContext : ProgramContext {
		public ITerminalNode CLASS() { return GetToken(VoltaParser.CLASS, 0); }
		public ITerminalNode IDENT() { return GetToken(VoltaParser.IDENT, 0); }
		public ITerminalNode CURLYBL() { return GetToken(VoltaParser.CURLYBL, 0); }
		public ITerminalNode CURLYBR() { return GetToken(VoltaParser.CURLYBR, 0); }
		public ITerminalNode Eof() { return GetToken(VoltaParser.Eof, 0); }
		public ConstDeclContext[] constDecl() {
			return GetRuleContexts<ConstDeclContext>();
		}
		public ConstDeclContext constDecl(int i) {
			return GetRuleContext<ConstDeclContext>(i);
		}
		public VarDeclContext[] varDecl() {
			return GetRuleContexts<VarDeclContext>();
		}
		public VarDeclContext varDecl(int i) {
			return GetRuleContext<VarDeclContext>(i);
		}
		public ClassDeclContext[] classDecl() {
			return GetRuleContexts<ClassDeclContext>();
		}
		public ClassDeclContext classDecl(int i) {
			return GetRuleContext<ClassDeclContext>(i);
		}
		public MethodDeclContext[] methodDecl() {
			return GetRuleContexts<MethodDeclContext>();
		}
		public MethodDeclContext methodDecl(int i) {
			return GetRuleContext<MethodDeclContext>(i);
		}
		public ProgramASTContext(ProgramContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IVoltaParserListener typedListener = listener as IVoltaParserListener;
			if (typedListener != null) typedListener.EnterProgramAST(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IVoltaParserListener typedListener = listener as IVoltaParserListener;
			if (typedListener != null) typedListener.ExitProgramAST(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IVoltaParserVisitor<TResult> typedVisitor = visitor as IVoltaParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitProgramAST(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ProgramContext program() {
		ProgramContext _localctx = new ProgramContext(Context, State);
		EnterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			_localctx = new ProgramASTContext(_localctx);
			EnterOuterAlt(_localctx, 1);
			{
			State = 42; Match(CLASS);
			State = 43; Match(IDENT);
			State = 49;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << CLASS) | (1L << CONST) | (1L << IDENT))) != 0)) {
				{
				State = 47;
				ErrorHandler.Sync(this);
				switch (TokenStream.LA(1)) {
				case CONST:
					{
					State = 44; constDecl();
					}
					break;
				case IDENT:
					{
					State = 45; varDecl();
					}
					break;
				case CLASS:
					{
					State = 46; classDecl();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				State = 51;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 52; Match(CURLYBL);
			State = 56;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==VOID || _la==IDENT) {
				{
				{
				State = 53; methodDecl();
				}
				}
				State = 58;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 59; Match(CURLYBR);
			State = 60; Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ConstDeclContext : ParserRuleContext {
		public ConstDeclContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_constDecl; } }
	 
		public ConstDeclContext() { }
		public virtual void CopyFrom(ConstDeclContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class ConstDeclASTContext : ConstDeclContext {
		public ITerminalNode CONST() { return GetToken(VoltaParser.CONST, 0); }
		public TypeContext type() {
			return GetRuleContext<TypeContext>(0);
		}
		public ITerminalNode IDENT() { return GetToken(VoltaParser.IDENT, 0); }
		public ITerminalNode EQUAL() { return GetToken(VoltaParser.EQUAL, 0); }
		public ITerminalNode SEMICOLON() { return GetToken(VoltaParser.SEMICOLON, 0); }
		public ITerminalNode NUM() { return GetToken(VoltaParser.NUM, 0); }
		public ITerminalNode CHARCONST() { return GetToken(VoltaParser.CHARCONST, 0); }
		public ITerminalNode STRING() { return GetToken(VoltaParser.STRING, 0); }
		public ConstDeclASTContext(ConstDeclContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IVoltaParserListener typedListener = listener as IVoltaParserListener;
			if (typedListener != null) typedListener.EnterConstDeclAST(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IVoltaParserListener typedListener = listener as IVoltaParserListener;
			if (typedListener != null) typedListener.ExitConstDeclAST(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IVoltaParserVisitor<TResult> typedVisitor = visitor as IVoltaParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitConstDeclAST(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ConstDeclContext constDecl() {
		ConstDeclContext _localctx = new ConstDeclContext(Context, State);
		EnterRule(_localctx, 2, RULE_constDecl);
		int _la;
		try {
			_localctx = new ConstDeclASTContext(_localctx);
			EnterOuterAlt(_localctx, 1);
			{
			State = 62; Match(CONST);
			State = 63; type();
			State = 64; Match(IDENT);
			State = 65; Match(EQUAL);
			State = 66;
			_la = TokenStream.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << NUM) | (1L << CHARCONST) | (1L << STRING))) != 0)) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			State = 67; Match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class VarDeclContext : ParserRuleContext {
		public VarDeclContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_varDecl; } }
	 
		public VarDeclContext() { }
		public virtual void CopyFrom(VarDeclContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class VarDeclASTContext : VarDeclContext {
		public TypeContext type() {
			return GetRuleContext<TypeContext>(0);
		}
		public ITerminalNode[] IDENT() { return GetTokens(VoltaParser.IDENT); }
		public ITerminalNode IDENT(int i) {
			return GetToken(VoltaParser.IDENT, i);
		}
		public ITerminalNode SEMICOLON() { return GetToken(VoltaParser.SEMICOLON, 0); }
		public ITerminalNode[] COMMA() { return GetTokens(VoltaParser.COMMA); }
		public ITerminalNode COMMA(int i) {
			return GetToken(VoltaParser.COMMA, i);
		}
		public VarDeclASTContext(VarDeclContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IVoltaParserListener typedListener = listener as IVoltaParserListener;
			if (typedListener != null) typedListener.EnterVarDeclAST(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IVoltaParserListener typedListener = listener as IVoltaParserListener;
			if (typedListener != null) typedListener.ExitVarDeclAST(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IVoltaParserVisitor<TResult> typedVisitor = visitor as IVoltaParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitVarDeclAST(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public VarDeclContext varDecl() {
		VarDeclContext _localctx = new VarDeclContext(Context, State);
		EnterRule(_localctx, 4, RULE_varDecl);
		int _la;
		try {
			_localctx = new VarDeclASTContext(_localctx);
			EnterOuterAlt(_localctx, 1);
			{
			State = 69; type();
			State = 70; Match(IDENT);
			State = 75;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==COMMA) {
				{
				{
				State = 71; Match(COMMA);
				State = 72; Match(IDENT);
				}
				}
				State = 77;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 78; Match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ClassDeclContext : ParserRuleContext {
		public ClassDeclContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_classDecl; } }
	 
		public ClassDeclContext() { }
		public virtual void CopyFrom(ClassDeclContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class ClassDeclASTContext : ClassDeclContext {
		public ITerminalNode CLASS() { return GetToken(VoltaParser.CLASS, 0); }
		public ITerminalNode IDENT() { return GetToken(VoltaParser.IDENT, 0); }
		public ITerminalNode CURLYBL() { return GetToken(VoltaParser.CURLYBL, 0); }
		public VarDeclContext varDecl() {
			return GetRuleContext<VarDeclContext>(0);
		}
		public ITerminalNode CURLYBR() { return GetToken(VoltaParser.CURLYBR, 0); }
		public ClassDeclASTContext(ClassDeclContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IVoltaParserListener typedListener = listener as IVoltaParserListener;
			if (typedListener != null) typedListener.EnterClassDeclAST(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IVoltaParserListener typedListener = listener as IVoltaParserListener;
			if (typedListener != null) typedListener.ExitClassDeclAST(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IVoltaParserVisitor<TResult> typedVisitor = visitor as IVoltaParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitClassDeclAST(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ClassDeclContext classDecl() {
		ClassDeclContext _localctx = new ClassDeclContext(Context, State);
		EnterRule(_localctx, 6, RULE_classDecl);
		try {
			_localctx = new ClassDeclASTContext(_localctx);
			EnterOuterAlt(_localctx, 1);
			{
			State = 80; Match(CLASS);
			State = 81; Match(IDENT);
			State = 82; Match(CURLYBL);
			State = 83; varDecl();
			State = 84; Match(CURLYBR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class MethodDeclContext : ParserRuleContext {
		public MethodDeclContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_methodDecl; } }
	 
		public MethodDeclContext() { }
		public virtual void CopyFrom(MethodDeclContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class MethodDeclASTContext : MethodDeclContext {
		public ITerminalNode IDENT() { return GetToken(VoltaParser.IDENT, 0); }
		public ITerminalNode BL() { return GetToken(VoltaParser.BL, 0); }
		public ITerminalNode BR() { return GetToken(VoltaParser.BR, 0); }
		public BlockContext block() {
			return GetRuleContext<BlockContext>(0);
		}
		public TypeContext type() {
			return GetRuleContext<TypeContext>(0);
		}
		public ITerminalNode VOID() { return GetToken(VoltaParser.VOID, 0); }
		public FormParsContext formPars() {
			return GetRuleContext<FormParsContext>(0);
		}
		public VarDeclContext[] varDecl() {
			return GetRuleContexts<VarDeclContext>();
		}
		public VarDeclContext varDecl(int i) {
			return GetRuleContext<VarDeclContext>(i);
		}
		public MethodDeclASTContext(MethodDeclContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IVoltaParserListener typedListener = listener as IVoltaParserListener;
			if (typedListener != null) typedListener.EnterMethodDeclAST(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IVoltaParserListener typedListener = listener as IVoltaParserListener;
			if (typedListener != null) typedListener.ExitMethodDeclAST(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IVoltaParserVisitor<TResult> typedVisitor = visitor as IVoltaParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitMethodDeclAST(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public MethodDeclContext methodDecl() {
		MethodDeclContext _localctx = new MethodDeclContext(Context, State);
		EnterRule(_localctx, 8, RULE_methodDecl);
		int _la;
		try {
			_localctx = new MethodDeclASTContext(_localctx);
			EnterOuterAlt(_localctx, 1);
			{
			State = 88;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case IDENT:
				{
				State = 86; type();
				}
				break;
			case VOID:
				{
				State = 87; Match(VOID);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			State = 90; Match(IDENT);
			State = 91; Match(BL);
			State = 93;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==IDENT) {
				{
				State = 92; formPars();
				}
			}

			State = 95; Match(BR);
			State = 99;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==IDENT) {
				{
				{
				State = 96; varDecl();
				}
				}
				State = 101;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 102; block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FormParsContext : ParserRuleContext {
		public FormParsContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_formPars; } }
	 
		public FormParsContext() { }
		public virtual void CopyFrom(FormParsContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class FormParsASTContext : FormParsContext {
		public TypeContext[] type() {
			return GetRuleContexts<TypeContext>();
		}
		public TypeContext type(int i) {
			return GetRuleContext<TypeContext>(i);
		}
		public ITerminalNode[] IDENT() { return GetTokens(VoltaParser.IDENT); }
		public ITerminalNode IDENT(int i) {
			return GetToken(VoltaParser.IDENT, i);
		}
		public ITerminalNode[] COMMA() { return GetTokens(VoltaParser.COMMA); }
		public ITerminalNode COMMA(int i) {
			return GetToken(VoltaParser.COMMA, i);
		}
		public FormParsASTContext(FormParsContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IVoltaParserListener typedListener = listener as IVoltaParserListener;
			if (typedListener != null) typedListener.EnterFormParsAST(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IVoltaParserListener typedListener = listener as IVoltaParserListener;
			if (typedListener != null) typedListener.ExitFormParsAST(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IVoltaParserVisitor<TResult> typedVisitor = visitor as IVoltaParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFormParsAST(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FormParsContext formPars() {
		FormParsContext _localctx = new FormParsContext(Context, State);
		EnterRule(_localctx, 10, RULE_formPars);
		int _la;
		try {
			_localctx = new FormParsASTContext(_localctx);
			EnterOuterAlt(_localctx, 1);
			{
			State = 104; type();
			State = 105; Match(IDENT);
			State = 112;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==COMMA) {
				{
				{
				{
				State = 106; Match(COMMA);
				}
				State = 107; type();
				State = 108; Match(IDENT);
				}
				}
				State = 114;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TypeContext : ParserRuleContext {
		public TypeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_type; } }
	 
		public TypeContext() { }
		public virtual void CopyFrom(TypeContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class TypeASTContext : TypeContext {
		public ITerminalNode IDENT() { return GetToken(VoltaParser.IDENT, 0); }
		public ITerminalNode SQUAREBL() { return GetToken(VoltaParser.SQUAREBL, 0); }
		public ITerminalNode SQUAREBR() { return GetToken(VoltaParser.SQUAREBR, 0); }
		public TypeASTContext(TypeContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IVoltaParserListener typedListener = listener as IVoltaParserListener;
			if (typedListener != null) typedListener.EnterTypeAST(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IVoltaParserListener typedListener = listener as IVoltaParserListener;
			if (typedListener != null) typedListener.ExitTypeAST(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IVoltaParserVisitor<TResult> typedVisitor = visitor as IVoltaParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitTypeAST(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public TypeContext type() {
		TypeContext _localctx = new TypeContext(Context, State);
		EnterRule(_localctx, 12, RULE_type);
		int _la;
		try {
			_localctx = new TypeASTContext(_localctx);
			EnterOuterAlt(_localctx, 1);
			{
			State = 115; Match(IDENT);
			State = 118;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==SQUAREBL) {
				{
				State = 116; Match(SQUAREBL);
				State = 117; Match(SQUAREBR);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
